crates/apollo-mcp-registry/src/uplink/snapshots/apollo_mcp_registry__uplink__schema__tests__schema_by_url_fallback@logs.snap
---
source: crates/apollo-mcp-registry/src/uplink/schema.rs
expression: yaml
---
- fields:
    http.response.status_code: 400
    url.full: "[url.full]"
  level: WARN
  message: failed to fetch supergraph schema
